@@ -1,4 +1,0 @@
-#!/usr/bin/perl
-use strict; use warnings;
-use Test::Pod::No404s;
-all_pod_files_ok();
